Oh my bash, updates.